--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <section id="Home">
+    <section id="home">
       <nav>
         <div class="logo">
           <!-- <img src="./logo.png" /> -->
@@ -68,8 +68,8 @@
     </div>
 
     <!--menu-->
-    <div class="menu" id="Menu">
-      <h1>Our<span>CHICKEN</span></h1>
+    <div class="menu" id="menu">
+      <h1>Our<span>Menu</span></h1>
 
       <div class="menu_box">
         <div class="menu_card">
@@ -366,7 +366,7 @@
       </div>
     </div>
     <!--gallery-->
-    <div class="gallary" id="Gallery">
+    <div class="gallary" id="gallary">
       <h1>Our<span>Gallery</span></h1>
       <div class="gallary_image_box">
         <div class="gallary_image">
