--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <section id="home">
       <nav>
         <div class="logo">
-          <!-- <img src="./logo.png" /> -->
-          <i class="fa-solid fa-utensils"></i>
+           <img src="./logo.png" />
+        
         </div>
         <ul>
           <li><a href="#home">HOME</a></li>
@@ -589,8 +589,8 @@
             <div class="profile">
                 <img src="./team-4.jpg">
                 <div class="info">
-                    <h2 class="name">chef</h2>
-                    <p>Lorem ipsum dolor sit, veritatis repellat expedita unde eos ducimus accusamus autem libero, fuga maxime dolore obcaecati doloremque commodi adipisci enim provident dolorum voluptatem.</p>
+                    <h2 class="name">Jack</h2>
+                    <p>Jack is a skilled non-veg chef specializing in flavorful meat, poultry, and seafood dishes. His expertise in seasoning and cooking techniques ensures every meal is a delicious and memorable experience.</p>
                     <div class="team_icon">
                         <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-instagram"></i>
@@ -604,8 +604,8 @@
             <div class="profile">
                 <img src="./team-1.jpg">
                 <div class="info">
-                    <h2 class="name">chef</h2>
-                    <p>Lorem ipsum dolor sit, veritatis repellat expedita unde eos ducimus accusamus autem libero, fuga maxime dolore obcaecati doloremque commodi adipisci enim provident dolorum voluptatem.</p>
+                    <h2 class="name">William</h2>
+                    <p>William is a talented veg chef, specializing in creating delicious dishes with fresh, seasonal vegetables. His creativity turns simple ingredients into flavorful, nutritious meals.</p>
                     <div class="team_icon">
                         <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-instagram"></i>
@@ -618,8 +618,8 @@
             <div class="profile">
                 <img src="./team-2.jpg">
                 <div class="info">
-                    <h2 class="name">chef</h2>
-                    <p>Lorem ipsum dolor sit, veritatis repellat expedita unde eos ducimus accusamus autem libero, fuga maxime dolore obcaecati doloremque commodi adipisci enim provident dolorum voluptatem.</p>
+                    <h2 class="name">James</h2>
+                    <p>James is a talented veg chef, specializing in creating delicious dishes with fresh, seasonal vegetables. His creativity turns simple ingredients into flavorful, nutritious meals.</p>
                     <div class="team_icon">
                         <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-instagram"></i>
@@ -632,8 +632,8 @@
             <div class="profile">
                 <img src="./team-3.jpg">
                 <div class="info">
-                    <h2 class="name">chef</h2>
-                    <p>Lorem ipsum dolor sit, veritatis repellat expedita unde eos ducimus accusamus autem libero, fuga maxime dolore obcaecati doloremque commodi adipisci enim provident dolorum voluptatem.</p>
+                    <h2 class="name">Harry</h2>
+                    <p>Harry is a talented veg chef, specializing in creating delicious dishes with fresh, seasonal vegetables. His creativity turns simple ingredients into flavorful, nutritious meals.</p>
                     <div class="team_icon">
                         <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-instagram"></i>
